chore: fix tests

--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -33,6 +33,12 @@ santalucia:
 springdoc:
   api-docs:
     enabled: false
+    
+management:
+  metrics:
+    export:
+      prometheus:
+        enabled: false
         
 helloWorld:
   url: http://localhost:${wiremock.server.port:8089}/hello-world/v1
