--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,11 @@
       <scope>runtime</scope>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-properties-migrator</artifactId>
+      <scope>runtime</scope>
+    </dependency>
     <!-- Devtools -->
   </dependencies>
   <build>
