--- a/.mvn/maven.config
+++ b/.mvn/maven.config
@@ -1,2 +1,4 @@
 -T 1C
 --no-transfer-progress
+-Dmaven.wagon.httpconnectionManager.maxPerRoute=300
+-Dmaven.wagon.httpconnectionManager.maxTotal=500
