--- a/.mvn/maven.config
+++ b/.mvn/maven.config
@@ -1,4 +1,3 @@
--T 1C
---no-transfer-progress
 -Dmaven.wagon.httpconnectionManager.maxPerRoute=300
 -Dmaven.wagon.httpconnectionManager.maxTotal=500
+-Dmaven.wagon.rto=1800000
