chore: restore output

--- a/.mvn/maven.config
+++ b/.mvn/maven.config
@@ -1,3 +1,1 @@
--Dmaven.wagon.httpconnectionManager.maxPerRoute=500
--Dmaven.wagon.httpconnectionManager.maxTotal=500
--Dmaven.wagon.rto=3600000
+--no-transfer-progress
