feature: delete unnecesary log config

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -363,9 +363,10 @@ spring:
         enabled: false
 logging:
   structured:
+    json:
+      exclude: ecs.version
     format:
       console: ecs
-      file: ecs
 
 ---
 #Profile habilitado de forma automatica cuando se compila en jenkins
