--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,11 @@
     </dependency>
     <dependency>
       <groupId>com.oracle.database.jdbc</groupId>
-      <artifactId>ojdbc11</artifactId>
+      <artifactId>ojdbc17</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.oracle.database.jdbc</groupId>
+      <artifactId>ucp17</artifactId>
     </dependency>
     <dependency>
       <groupId>com.oracle.database.nls</groupId>
