--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -1,19 +1,12 @@
 spring:
+  shell:
+    interactive:
+      enabled: false
   config:
     activate:
       on-profile:
       - test
-  datasource:
-    primary:
-      driver-class-name: org.h2.Driver
-      url: jdbc:h2:mem:db-informix;DB_CLOSE_DELAY=-1;MODE=DB2;DEFAULT_NULL_ORDERING=HIGH
-      hikari:
-        pool-name: h2-primary
-    secondary:
-      driver-class-name: org.h2.Driver
-      url: jdbc:h2:mem:db-oracle;DB_CLOSE_DELAY=-1;MODE=Oracle;DEFAULT_NULL_ORDERING=HIGH
-      hikari:
-        pool-name: h2-secondary
+ 
 
 ##En entornos de test no se levanta informix
 ## Se deshabilita la autoconfiguracion de sprint gest jdbc
