--- a/pom.xml
+++ b/pom.xml
@@ -236,6 +236,25 @@
           </execution>
         </executions>
       </plugin>
+      
+      <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>build-helper-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>add-source-jsonschema2pojo-execution-test</id>
+                <goals>
+                  <goal>add-source</goal>
+                </goals>
+                <phase>generate-sources</phase>
+                <configuration>
+                  <sources>
+                    <source>target/generated-sources/jsonschema2pojo</source>
+                  </sources>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
       <!--
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
